update github pages link with new username

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://ericl81.github.io/FEM-Crowdfunding_product_page_REACT/",
+	"homepage": "https://ericldev.github.io/FEM-Crowdfunding_product_page_REACT/",
 	"name": "crowdfunding-product-page",
 	"version": "0.1.0",
 	"private": true,
